--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,12 @@ authors = ["dignifiedquire <dignifiedquire@gmail.com>"]
 
 
 [dependencies]
-pairing = { git = "https://github.com/mmaker/pairing", rev = "a3bbecefe6c5d2f15c7126ea8b84930053929f20" }
+pairing = { git = "https://github.com/dignifiedquire/pairing", branch = "hashing" }
 ff = "0.4"
 rand = "0.4"
 rayon = "1"
 byteorder = "1.2"
 failure = "0.1"
+
+[features]
+default = ["pairing/u128-support", "pairing/asm"]
