--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,15 +2,22 @@
 name = "bls-signatures"
 version = "0.1.0"
 authors = ["dignifiedquire <dignifiedquire@gmail.com>"]
+license = "MIT OR Apache-2.0"
 
+edition = "2018"
 
 [dependencies]
-pairing = { git = "https://github.com/dignifiedquire/pairing", branch = "hashing" }
 ff = "0.4"
 rand = "0.4"
 rayon = "1"
 byteorder = "1.2"
 failure = "0.1"
 
+[dependencies.pairing]
+git = "https://github.com/dignifiedquire/pairing"
+branch = "hashing"
+
+
 [features]
-default = ["pairing/u128-support", "pairing/asm"]
+default = ["pairing/u128-support"]
+nightly = ["pairing/asm"]
