--- a/bls-signatures-ffi/Cargo.toml
+++ b/bls-signatures-ffi/Cargo.toml
@@ -18,4 +18,5 @@ git = "https://github.com/dignifiedquire/pairing"
 branch = "hashing"
 
 [build-dependencies]
+bindgen = "0.46"
 cbindgen = "0.6.8"
