--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,9 @@ jobs:
             - cargo-v0-{{ checksum "rust-toolchain" }}-{{ checksum "Cargo.toml" }}-{{ checksum "Cargo.lock" }}-{{ arch }}
       - run:
           name: Test (stable)
-          command: cargo +stable test --verbose --frozen --all
+          command: |
+            cargo +stable build --examples --frozen --all
+            cargo +stable test --verbose --frozen --all
           no_output_timeout: 15m
       - run:
           name: Prune the output files
@@ -69,8 +71,8 @@ jobs:
       - run:
           name: Test (stable) in release profile
           command: |
-            cargo +stable test --verbose --release --frozen --all
             cargo +stable build --examples --release --frozen --all
+            cargo +stable test --verbose --release --frozen --all
 
   test_nightly:
     docker:
@@ -85,7 +87,9 @@ jobs:
             - cargo-v0-{{ checksum "rust-toolchain" }}-{{ checksum "Cargo.toml" }}-{{ checksum "Cargo.lock" }}-{{ arch }}
       - run:
           name: Test (nightly)
-          command: cargo +$(cat rust-toolchain) test --verbose --frozen --all
+          command: |
+            cargo +$(cat rust-toolchain) build --examples --frozen --all
+            cargo +$(cat rust-toolchain) test --verbose --frozen --all
           no_output_timeout: 15m
 
   rustfmt:
