--- a/bls-signatures-ffi/Cargo.toml
+++ b/bls-signatures-ffi/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "bls-signatures-ffi"
 version = "0.1.0"
-authors = ["sidke <sidney@carbonfive.com>"]
+authors = ["sidke <sidney@carbonfive.com>", "dignifiedquire <dignifiedquire@gmail.com>"]
 license = "MIT OR Apache-2.0"
 edition = "2018"
 
@@ -14,8 +14,8 @@ rand = "0.4"
 libc = "0.2"
 
 [dependencies.pairing]
-git = "https://github.com/dignifiedquire/pairing"
-branch = "hashing"
+git = "https://github.com/filecoin-project/pairing"
+branch = "hashing-master"
 
 [build-dependencies]
 cbindgen = "0.6.8"
