--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,6 +118,59 @@ jobs:
           name: Run cargo clippy
           command: cargo clippy --all
 
+  publish_linux_release:
+    docker:
+      - image: filecoin/rust:latest
+    working_directory: /mnt/crate
+    steps:
+      - checkout
+      - attach_workspace:
+          at: "."
+      - restore_cache:
+          keys:
+            - cargo-v0-{{ checksum "rust-toolchain" }}-{{ checksum "Cargo.toml" }}-{{ checksum "Cargo.lock" }}-{{ arch }}
+      - run:
+          name: Build (release)
+          command: cargo +$(cat rust-toolchain) build --release --verbose --frozen --all
+      - run:
+          name: Install jq
+          command: apt-get install jq -yqq
+      - run:
+          name: Run publish-release.sh
+          command: bash ./scripts/publish-release.sh
+
+  publish_darwin_release:
+    macos:
+      xcode: "10.0.0"
+    working_directory: ~/crate
+    steps:
+      - run:
+          name: Configure environment variables
+          command: |
+            echo 'export PATH="${HOME}/.cargo/bin:${HOME}/.bin:${PATH}"' >> $BASH_ENV
+            echo 'export CIRCLE_ARTIFACTS="/tmp"' >> $BASH_ENV
+      - checkout
+      - run:
+          name: Install Rust
+          command: |
+            curl https://sh.rustup.rs -sSf | sh -s -- -y
+      - run: rustup install $(cat rust-toolchain)
+      - run: rustup default $(cat rust-toolchain)
+      - run: cargo update
+      - run: cargo fetch
+      - run:
+          name: Build (release)
+          command: cargo +$(cat rust-toolchain) build --release --verbose --frozen --all
+      - run:
+          name: Install jq
+          command: |
+            mkdir $HOME/.bin
+            curl --location https://github.com/stedolan/jq/releases/download/jq-1.6/jq-osx-amd64 --output $HOME/.bin/jq
+            chmod +x $HOME/.bin/jq
+      - run:
+          name: Run publish-release.sh
+          command: bash ./scripts/publish-release.sh
+
 workflows:
   version: 2
   test_all:
@@ -136,5 +189,11 @@ workflows:
           requires:
             - cargo_fetch
       - test_nightly:
+          requires:
+            - cargo_fetch
+      - publish_linux_release:
+          requires:
+            - cargo_fetch
+      - publish_darwin_release:
           requires:
             - cargo_fetch
