--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,15 +11,16 @@ rand = "0.4"
 rayon = "1"
 byteorder = "1.2"
 failure = "0.1"
+paired = "^0.15.0"
 
 [workspace]
 members = [
   "bls-signatures-ffi",
 ]
 
-[dependencies.pairing]
-git = "https://github.com/filecoin-project/pairing"
-branch = "hashing-master"
-
 [features]
 default = []
+
+[package.metadata.release]
+pre-release-commit-message = "chore(release): release {{version}}"
+pro-release-commit-message = "chore(release): starting development cycle for {{next_version}}"
