--- a/bls-signatures-ffi/Cargo.toml
+++ b/bls-signatures-ffi/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["staticlib"]
 bls-signatures = { path = ".." }
 rand = "0.4"
 libc = "0.2"
+rayon = "1.2.0"
 
 [build-dependencies]
 cbindgen = "0.6.8"
