--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,12 +16,12 @@ pre-release-commit-message = "chore(release): release {{version}}"
 pro-release-commit-message = "chore(release): starting development cycle for {{next_version}}"
 
 [dependencies]
-ff = "0.5"
+ff = { version = "0.2", package = "fff" }
 rayon = "1"
 byteorder = "1.2"
 failure = "0.1"
-paired = "0.16.0"
-groupy = "0.2.0"
+paired = "0.17.0"
+groupy = "0.3.0"
 rand_core = "0.5.1"
 
 [workspace]
