--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ paired = "0.17.0"
 rayon = "1"
 rand_core = "0.5.1"
 thiserror = "1.0"
+sha2ni = "0.8.1"
+hkdf = "0.8.0"
 
 [workspace]
 members = [
@@ -34,3 +36,7 @@ default = []
 [dev-dependencies]
 rand_xorshift = "0.2.0"
 rand = "0.7"
+hex = "0.4.2"
+
+[patch.crates-io]
+paired = { git = "https://github.com/filecoin-project/pairing", branch = "feat/hash-to-curve" }
