Miscellaneous tidying up
* Replace failure with thiserror
* Update dependencies
* Fix benchmarks
* Remove Cargo.lock

Signed-off-by: koushiro <koushiro.cqx@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,12 +17,11 @@ pro-release-commit-message = "chore(release): starting development cycle for {{n
 
 [dependencies]
 ff = { version = "0.2", package = "fff" }
-rayon = "1"
-byteorder = "1.2"
-failure = "0.1"
-paired = "0.17.0"
 groupy = "0.3.0"
+paired = "0.17.0"
+rayon = "1"
 rand_core = "0.5.1"
+thiserror = "1.0"
 
 [workspace]
 members = [
