--- a/bls-signatures-ffi/Cargo.toml
+++ b/bls-signatures-ffi/Cargo.toml
@@ -15,4 +15,4 @@ libc = "0.2"
 rayon = "1.2.0"
 
 [build-dependencies]
-cbindgen = "0.6.8"
+cbindgen = { version = "0.13.1", default-features = false }
