--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,3 +38,6 @@ rand_xorshift = "0.2.0"
 rand = "0.7"
 hex = "0.4.2"
 
+[patch.crates-io]
+paired = { git = "https://github.com/filecoin-project/pairing", branch = "feat/hash-to-curve-7" }
+
