--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,10 @@ default = []
 [dev-dependencies]
 rand_xorshift = "0.2.0"
 rand = "0.7"
-hex = "0.4.2"
+base64 = "0.12.0"
+serde = { version = "1.0.106", features = ["derive"] }
+serde_json = "1.0.52"
+base64-serde = "0.5.1"
 
 [patch.crates-io]
 paired = { git = "https://github.com/filecoin-project/pairing", branch = "feat/hash-to-curve-7" }
