--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ pro-release-commit-message = "chore(release): starting development cycle for {{n
 [dependencies]
 ff = { version = "0.2", package = "fff" }
 groupy = "0.3.0"
-paired = "0.18.0"
+paired = "0.19.0"
 rayon = "1"
 rand_core = "0.5.1"
 thiserror = "1.0"
@@ -36,5 +36,9 @@ default = []
 [dev-dependencies]
 rand_xorshift = "0.2.0"
 rand = "0.7"
-hex = "0.4.2"
+base64 = "0.12.0"
+serde = { version = "1.0.106", features = ["derive"] }
+serde_json = "1.0.52"
+base64-serde = "0.5.1"
+
 
