--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,10 +67,17 @@ jobs:
           keys:
             - cargo-v1-{{ checksum "rust-toolchain" }}-{{ checksum "Cargo.toml" }}-{{ checksum "Cargo.lock" }}-{{ arch }}
       - run:
-          name: Test (stable) in release profile
+          name: Test (stable) in release profile (pairing)
           command: |
             cargo +stable test --verbose --release --frozen --all
             cargo +stable build --examples --release --frozen --all
+
+      - run:
+          name: Test (stable) in release profile (blst)
+          command: |
+            cargo +stable test --no-default-features --features blst --verbose --release --frozen --all
+            cargo +stable build --no-default-features --features blst --examples --release --frozen --all
+
 
   test_nightly:
     docker:
@@ -84,8 +91,13 @@ jobs:
           keys:
             - cargo-v1-{{ checksum "rust-toolchain" }}-{{ checksum "Cargo.toml" }}-{{ checksum "Cargo.lock" }}-{{ arch }}
       - run:
-          name: Test (nightly)
+          name: Test (nightly) (pairing)
           command: cargo +$(cat rust-toolchain) test --verbose --frozen --all
+          no_output_timeout: 15m
+          
+      - run:
+          name: Test (nightly) (blst)
+          command: cargo +$(cat rust-toolchain) test --no-default-features --features blst --verbose --frozen --all
           no_output_timeout: 15m
 
   rustfmt:
