--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,7 @@ jobs:
       - run: cargo fetch
       - run: rustc +stable --version
       - run: rustc +$(cat rust-toolchain) --version
+      - run: rustup component install nightly-2020-11-18
       - persist_to_workspace:
           root: "."
           paths:
@@ -72,12 +73,6 @@ jobs:
             cargo +stable test --verbose --release --frozen --all
             cargo +stable build --examples --release --frozen --all
 
-      - run:
-          name: Test (stable) in release profile (blst)
-          command: |
-            cargo +stable test --no-default-features --features blst --verbose --release --frozen --all
-            cargo +stable build --no-default-features --features blst --examples --release --frozen --all
-
 
   test_nightly:
     docker:
@@ -92,12 +87,12 @@ jobs:
             - cargo-v1-{{ checksum "rust-toolchain" }}-{{ checksum "Cargo.toml" }}-{{ checksum "Cargo.lock" }}-{{ arch }}
       - run:
           name: Test (nightly) (pairing)
-          command: cargo +$(cat rust-toolchain) test --verbose --frozen --all
+          command: cargo +nightly-2020-11-19 test -Zpackage-features --verbose --frozen --all
           no_output_timeout: 15m
           
       - run:
           name: Test (nightly) (blst)
-          command: cargo +$(cat rust-toolchain) test --no-default-features --features blst --verbose --frozen --all
+          command: cargo +nightly-2020-11-19 test -Zpackage-features --no-default-features --features blst --verbose --frozen --all
           no_output_timeout: 15m
 
   rustfmt:
