--- a/bls-signatures-ffi/Cargo.toml
+++ b/bls-signatures-ffi/Cargo.toml
@@ -9,10 +9,15 @@ edition = "2018"
 crate-type = ["staticlib"]
 
 [dependencies]
-bls-signatures = { path = ".." }
+bls-signatures = { path = "..", default-features = false }
 rand = "0.7"
 libc = "0.2"
 rayon = "1.2.0"
 
 [build-dependencies]
 cbindgen = { version = "0.13.1", default-features = false }
+
+[features]
+default = ["pairing"]
+pairing = [ "bls-signatures/pairing" ]
+blst = [ "bls-signatures/blst" ]
