--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,9 @@ thiserror = "1.0"
 ff = { version = "0.2", package = "fff" }
 groupy = "0.3.0"
 
-paired = { version = "0.20.0", optional = true }
-sha2ni = { version = "0.8.1", optional = true }
-hkdf = { version = "0.8.0", optional = true }
+paired = { version = "0.21.0", optional = true }
+sha2 = { version = "0.9", optional = true }
+hkdf = { version = "0.10.0", optional = true }
 
 blst_lib = { version = "0.2.0", optional = true, package = "blst" }
 blstrs = { git = "https://github.com/filecoin-project/blstrs", branch = "feat-hash-to-curve", version = "0.1.1", optional = true }
@@ -38,7 +38,7 @@ members = [
 
 [features]
 default = ["pairing"]
-pairing = [ "paired", "sha2ni", "hkdf" ]
+pairing = [ "paired", "sha2", "hkdf" ]
 blst = [ "blst_lib", "blstrs", "crossbeam-channel" ]
 
 [dev-dependencies]
