--- a/bls-signatures-ffi/Cargo.toml
+++ b/bls-signatures-ffi/Cargo.toml
@@ -13,11 +13,15 @@ bls-signatures = { path = "..", default-features = false }
 rand = "0.7"
 libc = "0.2"
 rayon = "1.2.0"
+groupy = "0.3.0"
+
+blstrs = { git = "https://github.com/filecoin-project/blstrs", branch = "feat-hash-to-curve", version = "0.1.1", optional = true }
+paired = { version = "0.21.0", optional = true }
 
 [build-dependencies]
 cbindgen = { version = "0.13.1", default-features = false }
 
 [features]
 default = ["pairing"]
-pairing = [ "bls-signatures/pairing" ]
-blst = [ "bls-signatures/blst" ]
+pairing = [ "bls-signatures/pairing", "paired" ]
+blst = [ "bls-signatures/blst", "blstrs" ]
