--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,6 @@ hkdf = { version = "0.10.0", optional = true }
 
 blst_lib = { version = "0.2.0", optional = true, package = "blst" }
 blstrs = { git = "https://github.com/filecoin-project/blstrs", branch = "feat-hash-to-curve", version = "0.1.1", optional = true }
-crossbeam-channel = { version = "0.5.0", optional = true }
 
 [workspace]
 members = [
@@ -39,7 +38,7 @@ members = [
 [features]
 default = ["pairing"]
 pairing = [ "paired", "sha2", "hkdf" ]
-blst = [ "blst_lib", "blstrs", "crossbeam-channel" ]
+blst = [ "blst_lib", "blstrs" ]
 
 [dev-dependencies]
 rand = "0.7"
