--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ sha2 = { version = "0.9", optional = true }
 hkdf = { version = "0.10.0", optional = true }
 
 blst_lib = { version = "0.2.0", optional = true, package = "blst" }
-blstrs = { git = "https://github.com/filecoin-project/blstrs", branch = "feat-hash-to-curve", version = "0.1.1", optional = true }
+blstrs = { version = "0.1.2", optional = true }
 
 [workspace]
 members = [
