--- a/bls-signatures-ffi/Cargo.toml
+++ b/bls-signatures-ffi/Cargo.toml
@@ -15,7 +15,7 @@ libc = "0.2"
 rayon = "1.2.0"
 groupy = "0.3.0"
 
-blstrs = { git = "https://github.com/filecoin-project/blstrs", branch = "feat-hash-to-curve", version = "0.1.1", optional = true }
+blstrs = { version = "0.1.2", optional = true }
 paired = { version = "0.21.0", optional = true }
 
 [build-dependencies]
