--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,14 +16,19 @@ pre-release-commit-message = "chore(release): release {{version}}"
 pro-release-commit-message = "chore(release): starting development cycle for {{next_version}}"
 
 [dependencies]
-ff = { version = "0.2", package = "fff" }
-groupy = "0.3.0"
-paired = "0.20.0"
 rayon = "1"
 rand_core = "0.5.1"
 thiserror = "1.0"
-sha2ni = "0.8.1"
-hkdf = "0.8.0"
+
+ff = { version = "0.2", package = "fff" }
+groupy = "0.3.0"
+
+paired = { version = "0.21.0", optional = true }
+sha2 = { version = "0.9", optional = true }
+hkdf = { version = "0.10.0", optional = true }
+
+blst_lib = { version = "0.2.0", optional = true, package = "blst" }
+blstrs = { version = "0.1.2", optional = true }
 
 [workspace]
 members = [
@@ -31,7 +36,9 @@ members = [
 ]
 
 [features]
-default = []
+default = ["pairing"]
+pairing = [ "paired", "sha2", "hkdf" ]
+blst = [ "blst_lib", "blstrs" ]
 
 [dev-dependencies]
 rand = "0.7"
@@ -40,5 +47,3 @@ serde = { version = "1.0.106", features = ["derive"] }
 serde_json = "1.0.52"
 base64-serde = "0.5.1"
 rand_chacha = "0.2.2"
-
-
