--- a/bls-signatures-ffi/Cargo.toml
+++ b/bls-signatures-ffi/Cargo.toml
@@ -9,10 +9,19 @@ edition = "2018"
 crate-type = ["staticlib"]
 
 [dependencies]
-bls-signatures = { path = ".." }
+bls-signatures = { path = "..", default-features = false }
 rand = "0.7"
 libc = "0.2"
 rayon = "1.2.0"
+groupy = "0.3.0"
+
+blstrs = { version = "0.1.2", optional = true }
+paired = { version = "0.21.0", optional = true }
 
 [build-dependencies]
 cbindgen = { version = "0.13.1", default-features = false }
+
+[features]
+default = ["pairing"]
+pairing = [ "bls-signatures/pairing", "paired" ]
+blst = [ "bls-signatures/blst", "blstrs" ]
