--- a/bls-signatures-ffi/Cargo.toml
+++ b/bls-signatures-ffi/Cargo.toml
@@ -15,7 +15,8 @@ libc = "0.2"
 rayon = "1.2.0"
 groupy = "0.3.0"
 
-blstrs = { version = "0.1.2", optional = true }
+#blstrs = { version = "0.1.2", optional = true }
+blstrs = { git = "https://github.com/filecoin-project/blstrs", branch = "0-1-portable", optional = true }
 paired = { version = "0.21.0", optional = true }
 
 [build-dependencies]
@@ -25,3 +26,4 @@ cbindgen = { version = "0.13.1", default-features = false }
 default = ["pairing"]
 pairing = [ "bls-signatures/pairing", "paired" ]
 blst = [ "bls-signatures/blst", "blstrs" ]
+blst-portable = [ "bls-signatures/blst-portable", "blstrs/portable" ]
