--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ sha2 = { version = "0.9", optional = true }
 hkdf = { version = "0.10.0", optional = true }
 
 blst_lib = { version = "0.2.0", optional = true, package = "blst" }
-blstrs = { version = "0.1.2", optional = true }
+blstrs = { version = "0.1.3", optional = true }
 
 [workspace]
 members = [
@@ -39,6 +39,7 @@ members = [
 default = ["pairing"]
 pairing = [ "paired", "sha2", "hkdf" ]
 blst = [ "blst_lib", "blstrs" ]
+blst-portable = [ "blst_lib", "blst_lib/portable", "blstrs/portable" ]
 
 [dev-dependencies]
 rand = "0.7"
