--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,8 +27,8 @@ paired = { version = "0.21.0", optional = true }
 sha2 = { version = "0.9", optional = true }
 hkdf = { version = "0.10.0", optional = true }
 
-blst_lib = { version = "0.2.0", optional = true, package = "blst" }
-blstrs = { version = "0.1.3", optional = true }
+blst_lib = { version = "=0.3.3", optional = true, package = "blst" }
+blstrs = { version = "0.2", optional = true }
 
 [workspace]
 members = [
