--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,8 +76,18 @@ jobs:
           keys:
             - cargo-v4-{{ checksum "rust-toolchain" }}-{{ checksum "Cargo.toml" }}-{{ checksum "Cargo.lock" }}-{{ arch }}
       - run:
-          name: Test (nightly) (pairing)
+          name: Test (nightly) (pairing, multicore)
           command: cargo +nightly-2020-11-18 test -Zpackage-features --verbose --frozen --all
+          no_output_timeout: 15m
+          
+      - run:
+          name: Test (nightly) (blst, multicore)
+          command: cargo +nightly-2020-11-18 test -Zpackage-features --no-default-features --features blst,multicore --verbose --frozen --all
+          no_output_timeout: 15m
+
+      - run:
+          name: Test (nightly) (pairing)
+          command: cargo +nightly-2020-11-18 test -Zpackage-features --verbose --frozen --no-default-features --features pairing --all
           no_output_timeout: 15m
           
       - run:
