--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ pre-release-commit-message = "chore(release): release {{version}}"
 pro-release-commit-message = "chore(release): starting development cycle for {{next_version}}"
 
 [dependencies]
-rayon = "1"
+rayon = { version = "1", optional = true }
 rand_core = "0.5.1"
 thiserror = "1.0"
 
@@ -36,7 +36,8 @@ members = [
 ]
 
 [features]
-default = ["pairing"]
+default = ["pairing", "multicore"]
+multicore = ["rayon"]
 pairing = [ "paired", "sha2", "hkdf" ]
 blst = [ "blst_lib", "blstrs" ]
 blst-portable = [ "blst_lib", "blst_lib/portable", "blstrs/portable" ]
@@ -48,3 +49,7 @@ serde = { version = "1.0.106", features = ["derive"] }
 serde_json = "1.0.52"
 base64-serde = "0.5.1"
 rand_chacha = "0.2.2"
+
+[[example]]
+name = "verify"
+required-features = ["multicore"]
