--- a/bls-signatures-ffi/Cargo.toml
+++ b/bls-signatures-ffi/Cargo.toml
@@ -12,9 +12,9 @@ crate-type = ["staticlib"]
 bls-signatures = { path = "..", default-features = false }
 rand = "0.7"
 libc = "0.2"
-rayon = "1.2.0"
 groupy = "0.3.0"
 
+rayon = { version = "1.2.0", optional = true }
 blstrs = { version = "0.2", optional = true }
 paired = { version = "0.21.0", optional = true }
 
@@ -22,7 +22,8 @@ paired = { version = "0.21.0", optional = true }
 cbindgen = { version = "0.13.1", default-features = false }
 
 [features]
-default = ["pairing"]
+default = ["pairing", "multicore"]
 pairing = [ "bls-signatures/pairing", "paired" ]
 blst = [ "bls-signatures/blst", "blstrs" ]
 blst-portable = [ "bls-signatures/blst-portable", "blstrs/portable" ]
+multicore = [ "bls-signatures/multicore", "rayon" ]
