--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,10 +20,11 @@ rayon = { version = "1", optional = true }
 rand_core = "0.5.1"
 thiserror = "1.0"
 
-ff = { version = "0.3.1", package = "fff" }
-groupy = "0.4.1"
+ff = "0.10"
+group = "0.10"
 
-paired = { version = "0.22.0", optional = true }
+pairing_lib = { version = "0.20.0", optional = true, package = "pairing" }
+bls12_381 = { version = "=0.5.0", optional = true, features = ["experimental"] }
 sha2 = { version = "0.9", optional = true }
 hkdf = { version = "0.10.0", optional = true }
 
@@ -38,7 +39,7 @@ members = [
 [features]
 default = ["pairing", "multicore"]
 multicore = ["rayon"]
-pairing = [ "paired", "sha2", "hkdf" ]
+pairing = [ "pairing_lib", "bls12_381", "sha2", "hkdf" ]
 blst = [ "blst_lib", "blstrs" ]
 blst-portable = [ "blst_lib", "blst_lib/portable", "blstrs/portable" ]
 
