fix ffi & ci def

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       - run: cargo fetch
       - run: rustc +stable --version
       - run: rustc +$(cat rust-toolchain) --version
-      - run: rustup install nightly-2020-11-18
+      - run: rustup install nightly-2021-08-09
       - persist_to_workspace:
           root: "."
           paths:
@@ -76,28 +76,28 @@ jobs:
           keys:
             - cargo-v4-{{ checksum "rust-toolchain" }}-{{ checksum "Cargo.toml" }}-{{ checksum "Cargo.lock" }}-{{ arch }}
       - run:
-          name: Test (nightly) (pairing, multicore)
-          command: cargo +nightly-2020-11-18 test -Zpackage-features --verbose --frozen --all
+          name: Test (pairing, multicore)
+          command: cargo test --verbose --frozen --all
           no_output_timeout: 15m
 
       - run:
-          name: Test (nightly) (blst, multicore)
-          command: cargo +nightly-2020-11-18 test -Zpackage-features --no-default-features --features blst,multicore --verbose --frozen --all
+          name: Test (blst, multicore)
+          command: cargo test --no-default-features --features blst,multicore --verbose --frozen --all
           no_output_timeout: 15m
 
       - run:
-          name: Test (nightly) (pairing)
-          command: cargo +nightly-2020-11-18 test -Zpackage-features --verbose --frozen --no-default-features --features pairing --all
+          name: Test (pairing)
+          command: cargo test --verbose --frozen --no-default-features --features pairing --all
           no_output_timeout: 15m
 
       - run:
-          name: Test (nightly) (blst)
-          command: cargo +nightly-2020-11-18 test -Zpackage-features --no-default-features --features blst --verbose --frozen --all
+          name: Test (blst)
+          command: cargo test --no-default-features --features blst --verbose --frozen --all
           no_output_timeout: 15m
 
       - run:
           name: Check benches (nightly)
-          command: cargo +nightly-2020-11-18 check --all-targets --frozen --workspace
+          command: cargo +nightly-2021-08-09 check --all-targets --frozen --workspace
 
   rustfmt:
     docker:
