--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.10.0"
 authors = ["dignifiedquire <dignifiedquire@gmail.com>"]
 license = "MIT OR Apache-2.0"
 edition = "2018"
+resolver = "2"
 
 description = "Aggregate BLS Signatures"
 documentation = "https://docs.rs/bls-signatures"
@@ -13,13 +14,13 @@ readme = "README.md"
 
 [dependencies]
 rayon = { version = "1", optional = true }
-rand_core = "0.5.1"
+rand_core = "0.6.0"
 thiserror = "1.0"
 
 ff = "0.10"
 group = "0.10"
+pairing_lib = { version = "0.20.0", package = "pairing" }
 
-pairing_lib = { version = "0.20.0", optional = true, package = "pairing" }
 bls12_381 = { version = "=0.5.0", optional = true, features = ["experimental"] }
 sha2 = { version = "0.9", optional = true }
 hkdf = { version = "0.10.0", optional = true }
@@ -35,17 +36,17 @@ members = [
 [features]
 default = ["pairing", "multicore"]
 multicore = ["rayon"]
-pairing = [ "pairing_lib", "bls12_381", "sha2", "hkdf" ]
-blst = [ "blst_lib", "blstrs", "pairing_lib" ]
+pairing = [ "bls12_381", "sha2", "hkdf" ]
+blst = [ "blst_lib", "blstrs" ]
 blst-portable = [ "blst_lib", "blst_lib/portable", "blstrs/portable" ]
 
 [dev-dependencies]
-rand = "0.7"
+rand = "0.8"
 base64 = "0.12.0"
 serde = { version = "1.0.106", features = ["derive"] }
 serde_json = "1.0.52"
 base64-serde = "0.5.1"
-rand_chacha = "0.2.2"
+rand_chacha = "0.3.1"
 
 [[example]]
 name = "verify"
