--- a/bls-signatures-ffi/Cargo.toml
+++ b/bls-signatures-ffi/Cargo.toml
@@ -10,20 +10,19 @@ crate-type = ["staticlib"]
 
 [dependencies]
 bls-signatures = { path = "..", default-features = false }
-rand = "0.7"
+rand = "0.8"
 libc = "0.2"
-groupy = "0.4.1"
 
 rayon = { version = "1.2.0", optional = true }
 blstrs = { version = "0.3.0", optional = true }
-paired = { version = "0.22.0", optional = true }
+bls12_381 = { version = "=0.5.0", optional = true, features = ["experimental"] }
 
 [build-dependencies]
 cbindgen = { version = "0.13.1", default-features = false }
 
 [features]
 default = ["pairing", "multicore"]
-pairing = [ "bls-signatures/pairing", "paired" ]
+pairing = [ "bls-signatures/pairing", "bls12_381" ]
 blst = [ "bls-signatures/blst", "blstrs" ]
 blst-portable = [ "bls-signatures/blst-portable", "blstrs/portable" ]
 multicore = [ "bls-signatures/multicore", "rayon" ]
