--- a/bls-signatures-ffi/Cargo.toml
+++ b/bls-signatures-ffi/Cargo.toml
@@ -15,7 +15,8 @@ libc = "0.2"
 
 rayon = { version = "1.2.0", optional = true }
 blstrs = { version = "0.3.0", optional = true }
-bls12_381 = { version = "=0.5.0", optional = true, features = ["experimental"] }
+bls12_381 = { version = "=0.6.0", optional = true, features = ["experimental"] }
+group = "0.11"
 
 [build-dependencies]
 cbindgen = { version = "0.13.1", default-features = false }
