--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,10 +24,10 @@ pairing_lib = { version = "0.21.0", package = "pairing" }
 
 bls12_381 = { version = "=0.6.0", optional = true, features = ["experimental"] }
 sha2 = { version = "0.9", optional = true }
-hkdf = { version = "0.10.0", optional = true }
+hkdf = { version = "0.11.0", optional = true }
 
-blst_lib = { version = "=0.3.3", optional = true, package = "blst" }
-blstrs = { version = "0.3", optional = true }
+blst_lib = { version = "=0.3.5", optional = true, package = "blst" }
+blstrs = { git = "https://github.com/filecoin-project/blstrs", branch = "master", optional = true }
 
 [workspace]
 members = [
@@ -43,16 +43,13 @@ blst-portable = [ "blst_lib", "blst_lib/portable", "blstrs/portable" ]
 
 [dev-dependencies]
 rand = "0.8"
-base64 = "0.12.0"
+base64 = "0.13.0"
 serde = { version = "1.0.106", features = ["derive"] }
 serde_json = "1.0.52"
-base64-serde = "0.5.1"
+base64-serde = "0.6.1"
 rand_chacha = "0.3.1"
 
 [[example]]
 name = "verify"
 required-features = ["multicore"]
 
-
-[patch.crates-io]
-blstrs = { git = "https://github.com/filecoin-project/blstrs", branch = "halo"}
