--- a/bls-signatures-ffi/Cargo.toml
+++ b/bls-signatures-ffi/Cargo.toml
@@ -13,8 +13,8 @@ bls-signatures = { path = "..", default-features = false }
 rand = "0.8"
 libc = "0.2"
 
-rayon = { version = "1.2.0", optional = true }
-blstrs = { version = "0.3.0", optional = true }
+rayon = { version = "1.5.0", optional = true }
+blstrs = { git = "https://github.com/filecoin-project/blstrs", branch = "master", optional = true }
 bls12_381 = { version = "=0.6.0", optional = true, features = ["experimental"] }
 group = "0.11"
 
