--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.10.0"
 authors = ["dignifiedquire <dignifiedquire@gmail.com>"]
 license = "MIT OR Apache-2.0"
 edition = "2018"
+resolver = "2"
 
 description = "Aggregate BLS Signatures"
 documentation = "https://docs.rs/bls-signatures"
@@ -11,24 +12,22 @@ homepage = "https://github.com/filecoin-project/bls-signatures"
 repository = "https://github.com/filecoin-project/bls-signatures"
 readme = "README.md"
 
-[package.metadata.release]
-pre-release-commit-message = "chore(release): release {{version}}"
-pro-release-commit-message = "chore(release): starting development cycle for {{next_version}}"
-
 [dependencies]
 rayon = { version = "1", optional = true }
-rand_core = "0.5.1"
+rand_core = "0.6.0"
 thiserror = "1.0"
+subtle = "2.2.1"
 
-ff = { version = "0.3.1", package = "fff" }
-groupy = "0.4.1"
+ff = "0.11"
+group = "0.11"
+pairing_lib = { version = "0.21.0", package = "pairing" }
 
-paired = { version = "0.22.0", optional = true }
+bls12_381 = { version = "=0.6.0", optional = true, features = ["experimental"] }
 sha2 = { version = "0.9", optional = true }
-hkdf = { version = "0.10.0", optional = true }
+hkdf = { version = "0.11.0", optional = true }
 
-blst_lib = { version = "=0.3.3", optional = true, package = "blst" }
-blstrs = { version = "0.3", optional = true }
+blst_lib = { version = "=0.3.5", optional = true, package = "blst" }
+blstrs = { git = "https://github.com/filecoin-project/blstrs", branch = "master", optional = true }
 
 [workspace]
 members = [
@@ -38,18 +37,19 @@ members = [
 [features]
 default = ["pairing", "multicore"]
 multicore = ["rayon"]
-pairing = [ "paired", "sha2", "hkdf" ]
+pairing = [ "bls12_381", "sha2", "hkdf" ]
 blst = [ "blst_lib", "blstrs" ]
 blst-portable = [ "blst_lib", "blst_lib/portable", "blstrs/portable" ]
 
 [dev-dependencies]
-rand = "0.7"
-base64 = "0.12.0"
+rand = "0.8"
+base64 = "0.13.0"
 serde = { version = "1.0.106", features = ["derive"] }
 serde_json = "1.0.52"
-base64-serde = "0.5.1"
-rand_chacha = "0.2.2"
+base64-serde = "0.6.1"
+rand_chacha = "0.3.1"
 
 [[example]]
 name = "verify"
 required-features = ["multicore"]
+
