--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ sha2 = { version = "0.9", optional = true }
 hkdf = { version = "0.11.0", optional = true }
 
 blst_lib = { version = "=0.3.5", optional = true, package = "blst" }
-blstrs = { git = "https://github.com/filecoin-project/blstrs", branch = "master", optional = true }
+blstrs = { version = "0.4.0", optional = true }
 
 [workspace]
 members = [
