--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ multicore = ["rayon"]
 pairing = [ "bls12_381", "sha2", "hkdf" ]
 blst = [ "blst_lib", "blstrs" ]
 blst-portable = [ "blst_lib", "blst_lib/portable", "blstrs/portable" ]
+min-sig = []
 
 [dev-dependencies]
 rand = "0.8"
