chore: update dependencies
Update the dependencies to their latest versions. This makes this
library requiring at least Rust 1.56.0.

Due to dependencies having updated the version of `bitvec` they are
using, the calls to it changed. In the previous version 0.22
[`as_buffer` returned] a reference to the underlying data. This
method was removed in version 1.0.0 in favour of making of making the
[`data` field public].

A newer version of nightly on CI is needed, due to the minimum supported
Rust version 1.56.0. Currently running on ARM via GitHub Actions doesn't
work due to invalid memory acccesses, hence use CircleCI to run on ARM.

[`as_buffer` returned]: https://docs.rs/bitvec/0.22.3/src/bitvec/array.rs.html#274-276
[`data` field public]: https://docs.rs/bitvec/1.0.0/src/bitvec/array.rs.html#33

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       - run: cargo fetch
       - run: rustc +stable --version
       - run: rustc +$(cat rust-toolchain) --version
-      - run: rustup install nightly-2021-08-09
+      - run: rustup install nightly-2022-04-24
       - persist_to_workspace:
           root: "."
           paths:
@@ -97,7 +97,27 @@ jobs:
 
       - run:
           name: Check benches (nightly)
-          command: cargo +nightly-2021-08-09 check --all-targets --frozen --workspace
+          command: cargo +nightly-2022-04-24 check --all-targets --frozen --workspace
+
+  test_arm:
+    machine:
+      image: ubuntu-2004:202101-01
+    resource_class: arm.large
+    steps:
+      - checkout
+      - run:
+          name: Install Rust
+          command: |
+            curl https://sh.rustup.rs -sSf | sh -s -- --profile minimal --default-toolchain $(cat rust-toolchain) -y
+      - run:
+          name: Run cargo test pairing,multicore
+          command: cargo test --no-default-features --features pairing,multicore
+      - run:
+          name: Run cargo test blst,multicore
+          command: cargo test --release --no-default-features --features blst,multicore
+      - run:
+          name: Run cargo test blst,multicore,blst-portable
+          command: cargo test --release --no-default-features --features blst,multicore,blst-portable
 
   rustfmt:
     docker:
@@ -206,6 +226,7 @@ workflows:
       - test_nightly:
           requires:
             - cargo_fetch
+      - test_arm
       - publish_linux_release:
           requires:
             - cargo_fetch
