--- a/bls-signatures-ffi/Cargo.toml
+++ b/bls-signatures-ffi/Cargo.toml
@@ -14,9 +14,9 @@ rand = "0.8"
 libc = "0.2"
 
 rayon = { version = "1.5.0", optional = true }
-blstrs = { version = "0.6.0", optional = true }
-bls12_381 = { version = "=0.7.0", optional = true, features = ["experimental"] }
-group = "0.12"
+blstrs = { version = "0.7.0", optional = true }
+bls12_381 = { version = "0.8.0", optional = true, features = ["experimental"] }
+group = "0.13"
 
 [build-dependencies]
 cbindgen = { version = "0.13.1", default-features = false }
