--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ bls12_381 = { version = "=0.7.0", optional = true, features = ["experimental"] }
 sha2 = { version = "0.9", optional = true }
 hkdf = { version = "0.11.0", optional = true }
 
-blst_lib = { version = "=0.3.10", optional = true, package = "blst" }
+blst_lib = { version = "0.3.10", optional = true, package = "blst" }
 blstrs = { version = "0.6.0", optional = true }
 
 [workspace]
