--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,12 +23,14 @@ ff = "0.13"
 group = "0.13"
 pairing_lib = { version = "0.23.0", package = "pairing" }
 
-bls12_381 = { version = "0.8.0", optional = true, features = ["experimental"] }
+bls12_381 = { version = "0.8.0", optional = true, features = ["experimental", "zeroize"] }
 sha2 = { version = "0.9", optional = true }
 hkdf = { version = "0.11.0", optional = true }
 
 blst_lib = { version = "0.3.10", optional = true, package = "blst" }
 blstrs = { version = "0.7.0", optional = true }
+
+zeroize = { version = "1.7", features = ["derive"] }
 
 [features]
 default = ["pairing", "multicore"]
